data/all_generated_tests/raw_wast_tests/unreachable_MismanagementofBlockNesting_1270.wast
;; 1. **Test Description:**    Create a test with deeply nested loops where an `unreachable` instruction appears in the innermost loop, and a `br_table` targets varying depths incorrectly managing the loop exits.    *Constraint Checked:* Ensure correct evaluation of loop depth and immediate trap behavior when `unreachable` is executed.    *Mismanagement Focus:* Verify that the `br_table` does not incorrectly exit multiple nested loops upon encountering `unreachable`.

(assert_invalid
  (module (func $test-deep-loop-unreachable-with-br_table
    (block (loop (block (loop (block (br_table 0 1 2 (i32.const 1)) (unreachable))))))
  ))
  "type mismatch"
)